--- a/content/docs/jvm-jre-jdk.mdx
+++ b/content/docs/jvm-jre-jdk.mdx
@@ -1,68 +1,193 @@
 ---
-title: Java JDK, JRE and JVM
-description: Definations of JDK, JRE and JVM
+title: "JVM, JRE e JDK - Entendendo a Arquitetura Java"
+description: "Aprenda sobre JVM, JRE e JDK - os componentes fundamentais da plataforma Java com explicações detalhadas e exemplos práticos"
+difficulty: "Básico"
+category: "Fundamentos Java"
 ---
 
-In this tutorial, you will learn about [JDK](#what-is-jdk), [JRE](#what-is-jre), and [JVM](#what-is-jvm). You will also learn the key differences between them.
+## JVM, JRE e JDK - Entendendo a Arquitetura Java
 
-## What is JVM?
+Neste tutorial, você aprenderá sobre [JVM](#o-que-é-jvm), [JRE](#o-que-é-jre) e [JDK](#o-que-é-jdk), além das principais diferenças entre eles e como eles trabalham juntos para executar aplicações Java.
 
-**JVM (Java Virtual Machine)** is an abstract machine that enables your computer to run a Java program.
+## O que é JVM?
 
-When you run the Java program, Java compiler first compiles your Java code to bytecode. Then, the JVM translates bytecode into native machine code (set of instructions that a computer's CPU executes directly).
+**JVM (Java Virtual Machine)** é uma máquina virtual abstrata que permite ao seu computador executar programas Java.
 
-Java is a **platform-independent language**. It's because when you write Java code, it's ultimately written for JVM but not your physical machine (computer). Since JVM ​executes the Java bytecode which is platform-independent, Java is platform-independent.
+Quando você executa um programa Java, o compilador Java primeiro compila seu código Java para bytecode. Em seguida, a JVM traduz o bytecode em código nativo da máquina (conjunto de instruções que a CPU do computador executa diretamente).
+
+Java é uma **linguagem independente de plataforma**. Isso acontece porque quando você escreve código Java, ele é escrito para a JVM, não para sua máquina física (computador). Como a JVM executa o bytecode Java que é independente de plataforma, Java também é independente de plataforma.
+
+### Como a JVM Funciona
+
+1. **Compilação**: O código Java (.java) é compilado para bytecode (.class)
+2. **Carregamento**: A JVM carrega as classes necessárias
+3. **Verificação**: O bytecode é verificado quanto à segurança
+4. **Execução**: O bytecode é interpretado ou compilado para código nativo
+5. **Garbage Collection**: Memória não utilizada é liberada automaticamente
 
 <div align="center">
-![Working of a Java Program](/img/docs/jvm-jre-jdk/1.svg)
-<p align="center" className="text-sm text-zinc-500 font-medium">Working of a Java Program</p>
+![Funcionamento de um Programa Java](/img/docs/jvm-jre-jdk/1.svg)
+<p align="center" className="text-sm text-zinc-500 font-medium">Funcionamento de um Programa Java</p>
 </div>
 
-If you are interested in learning about JVM Architecture, visit [The JVM Architecture Explained](https://dzone.com/articles/jvm-architecture-explained).
+Se você estiver interessado em aprender sobre a Arquitetura da JVM, visite [The JVM Architecture Explained](https://dzone.com/articles/jvm-architecture-explained).
 
-## What is JRE?
+### Componentes da JVM
 
-**JRE (Java Runtime Environment)** is a software package that provides Java class libraries, **Java Virtual Machine (JVM)**, and other components that are required to run Java applications.
+- **Class Loader**: Carrega classes em tempo de execução
+- **Memory Area**: Gerencia a memória da aplicação
+- **Execution Engine**: Executa o bytecode
+- **Native Method Interface**: Interface com bibliotecas nativas
+- **Native Method Libraries**: Bibliotecas nativas do sistema
 
-JRE is the superset of JVM.
+## O que é JRE?
+
+**JRE (Java Runtime Environment)** é um pacote de software que fornece bibliotecas de classes Java, **Java Virtual Machine (JVM)** e outros componentes necessários para executar aplicações Java.
+
+O JRE é o superconjunto da JVM, ou seja, contém a JVM e muito mais.
 
 <div align="center">
-![Java Runtime Environment](/img/docs/jvm-jre-jdk/2.svg)
+![Ambiente de Execução Java](/img/docs/jvm-jre-jdk/2.svg)
 <p align="center" className="text-sm text-zinc-500 font-medium">
-  Java Runtime Environment
+  Ambiente de Execução Java
 </p>
 </div>
 
+Se você precisa executar programas Java, mas não desenvolvê-los, o JRE é o que você precisa. Você pode baixar o JRE da [página de downloads do Java SE Runtime Environment](http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html).
 
-If you need to run Java programs, but not develop them, JRE is what you need. You can download JRE from [Java SE Runtime Environment 8 Downloads page](http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html).
+### Componentes do JRE
 
-## What is JDK?
+- **JVM**: Máquina virtual Java
+- **Java Class Libraries**: Bibliotecas padrão do Java
+- **Deployment Technologies**: Ferramentas de implantação
+- **User Interface Toolkits**: Kits de interface do usuário
+- **Integration Libraries**: Bibliotecas de integração
 
-**JDK (Java Development Kit)** is a software development kit required to develop applications in Java. When you download JDK, JRE is also downloaded with it.
+## O que é JDK?
 
-In addition to JRE, JDK also contains a number of development tools (compilers, JavaDoc, Java Debugger, etc).
+**JDK (Java Development Kit)** é um kit de desenvolvimento de software necessário para desenvolver aplicações em Java. Quando você baixa o JDK, o JRE também é baixado junto.
+
+Além do JRE, o JDK também contém várias ferramentas de desenvolvimento (compiladores, JavaDoc, Java Debugger, etc.).
 
 <div align="center"  className="lg:px-36">
 
-![Java Development Kit](/img/docs/jvm-jre-jdk/3.svg)
+![Kit de Desenvolvimento Java](/img/docs/jvm-jre-jdk/3.svg)
 
 <p align="center" className="text-sm text-zinc-500 font-medium">
-  Java Development Kit
+  Kit de Desenvolvimento Java
 </p>
 
 </div>
 
-If you want to develop Java applications, [download JDK](http://www.oracle.com/technetwork/java/javase/downloads/index-jsp-138363.html).
+Se você quer desenvolver aplicações Java, [baixe o JDK](http://www.oracle.com/technetwork/java/javase/downloads/index-jsp-138363.html).
 
-## Relationship between JVM, JRE, and JDK.
+### Ferramentas do JDK
+
+- **javac**: Compilador Java
+- **java**: Interpretador Java
+- **javadoc**: Gerador de documentação
+- **jdb**: Debugger Java
+- **jar**: Criador de arquivos JAR
+- **javap**: Descompilador de bytecode
+
+## Relacionamento entre JVM, JRE e JDK
 
 <div className="mt-8" />
 <div align="center" className="lg:px-36">
 
-![Relationship between JVM, JRE, and JDK](/img/docs/jvm-jre-jdk/4.svg)
+![Relacionamento entre JVM, JRE e JDK](/img/docs/jvm-jre-jdk/4.svg)
 
 <p align="center" className="text-sm text-zinc-500 font-medium">
-  Relationship between JVM, JRE, and JDK
+  Relacionamento entre JVM, JRE e JDK
 </p>
 
 </div>
+
+## Resumo das Diferenças
+
+| Componente | Descrição | Quando Usar |
+|------------|-----------|-------------|
+| **JVM** | Máquina virtual que executa bytecode Java | Sempre necessário para executar Java |
+| **JRE** | JVM + bibliotecas Java + ferramentas de execução | Para executar aplicações Java |
+| **JDK** | JRE + ferramentas de desenvolvimento | Para desenvolver aplicações Java |
+
+## Exemplo Prático
+
+```bash
+# Compilar código Java (requer JDK)
+javac MeuPrograma.java
+
+# Executar programa Java (requer JRE)
+java MeuPrograma
+
+# Verificar versão do Java
+java -version
+```
+
+## Exercícios Práticos
+
+### Exercício 1: Verificação de Instalação
+**Objetivo**: Verificar se o Java está instalado corretamente.
+
+**Enunciado**: Execute os seguintes comandos e verifique a saída:
+
+```bash
+java -version
+javac -version
+```
+
+**Resolução**:
+- Se ambos os comandos retornarem versões, você tem o JDK instalado
+- Se apenas `java -version` funcionar, você tem apenas o JRE
+- Se nenhum funcionar, você precisa instalar o Java
+
+### Exercício 2: Compilação e Execução
+**Objetivo**: Criar e executar um programa Java simples.
+
+**Enunciado**: Crie um arquivo `Teste.java` com o seguinte conteúdo:
+
+```java
+public class Teste {
+    public static void main(String[] args) {
+        System.out.println("Java está funcionando!");
+        System.out.println("Versão: " + System.getProperty("java.version"));
+        System.out.println("Vendor: " + System.getProperty("java.vendor"));
+    }
+}
+```
+
+**Resolução**:
+```bash
+# Compilar
+javac Teste.java
+
+# Executar
+java Teste
+```
+
+### Exercício 3: Análise de Bytecode
+**Objetivo**: Entender como o código Java é compilado.
+
+**Enunciado**: Use o comando `javap` para analisar o bytecode gerado.
+
+**Resolução**:
+```bash
+# Ver informações básicas da classe
+javap Teste.class
+
+# Ver bytecode detalhado
+javap -c Teste.class
+
+# Ver constantes da classe
+javap -v Teste.class
+```
+
+## Conclusão
+
+Entender a diferença entre JVM, JRE e JDK é fundamental para qualquer desenvolvedor Java:
+
+- **JVM**: O coração da plataforma Java
+- **JRE**: Tudo que você precisa para executar aplicações Java
+- **JDK**: Tudo que você precisa para desenvolver aplicações Java
+
+O JDK contém o JRE, que por sua vez contém a JVM. Esta hierarquia garante que você tenha todas as ferramentas necessárias para desenvolvimento e execução de aplicações Java.
