--- a/content/docs/continue-statement.mdx
+++ b/content/docs/continue-statement.mdx
@@ -1,53 +1,51 @@
 ---
-title: Java continue Statement
-description: In this tutorial, we will learn how to use the Java continue statement to skip the current iteration of a loop.
+title: "Instrução continue em Java"
+description: "Aprenda como usar a instrução continue em Java para pular iterações de loops com exemplos práticos e exercícios"
+difficulty: "Básico"
+category: "Controle de Fluxo"
 ---
 
-While working with loops, sometimes you might want to skip some statements or terminate the loop. In such cases, break and continue statements are used.
+## Instrução continue em Java
 
-To learn about the break statement, visit Java break. Here, we will learn about the continue statement.
+Ao trabalhar com loops, às vezes você pode querer pular algumas instruções ou terminar o loop. Nesses casos, as instruções `break` e `continue` são usadas.
 
+Para aprender sobre a instrução break, visite [Java break](/docs/break-statement). Aqui, aprenderemos sobre a instrução continue.
 
-## Java continue
+## O que é continue
 
-The continue statement skips the current iteration of a loop (for, while, do...while, etc).
+A instrução `continue` pula a iteração atual de um loop (for, while, do...while, etc.).
 
-After the continue statement, the program moves to the end of the loop. And, test expression is evaluated (update statement is evaluated in case of the for loop).
+Após a instrução continue, o programa vai para o final do loop. E a expressão de teste é avaliada (a instrução de atualização é avaliada no caso do loop for).
 
-Here's the syntax of the continue statement.
+Aqui está a sintaxe da instrução continue:
 
 ```java
 continue;
 ```
 
-Note: The continue statement is almost always used in decision-making statements (if...else Statement).
+**Nota**: A instrução continue é quase sempre usada em instruções de tomada de decisão (instrução if...else).
 
+## Como funciona a instrução continue
 
-## Working of Java continue statement
-The working of continue statement with Java while, do...while, and for loop.
-Working of Java continue Statement
-
-### Example 1: Java continue statement
+### Exemplo 1: Instrução continue em loop for
 
 ```java
-class Main {
-  public static void main(String[] args) {
-
-    // for loop
-    for (int i = 1; i <= 10; ++i) {
-
-      // if value of i is between 4 and 9
-      // continue is executed
-      if (i > 4 && i < 9) {
-        continue;
-      }
-      System.out.println(i);
+public class Main {
+    public static void main(String[] args) {
+        // Loop for
+        for (int i = 1; i <= 10; ++i) {
+            // Se o valor de i estiver entre 4 e 9
+            // continue é executado
+            if (i > 4 && i < 9) {
+                continue;
+            }
+            System.out.println(i);
+        }
     }
-  }
 }
 ```
 
-#### Output:
+**Saída**:
 
 ```plaintext
 1
@@ -57,64 +55,376 @@ class Main {
 9
 10
 ```
-In the above program, we are using the for loop to print the value of i in each iteration. To know how for loop works, visit Java for loop. Notice the statement,
+
+No programa acima, estamos usando o loop for para imprimir o valor de i em cada iteração. Observe a instrução:
 
 ```java
 if (i > 4 && i < 9) {
     continue;
 }
 ```
-Here, the continue statement is executed when the value of i becomes more than 4 and less than 9.
 
-It then skips the print statement for those values. Hence, the output skips the values 5, 6, 7, and 8.
+Aqui, a instrução continue é executada quando o valor de i se torna maior que 4 e menor que 9.
 
-### Example 2: Compute the sum of 5 positive numbers
+Ela então pula a instrução de impressão para esses valores. Por isso, a saída pula os valores 5, 6, 7 e 8.
+
+### Exemplo 2: Calcular a soma de 5 números positivos
 
 ```java
 import java.util.Scanner;
 
-class Main {
-  public static void main(String[] args) {
+public class Main {
+    public static void main(String[] args) {
+        Double number, sum = 0.0;
+        // Criar um objeto Scanner
+        Scanner input = new Scanner(System.in);
 
-    Double number, sum = 0.0;
-    // create an object of Scanner
-    Scanner input = new Scanner(System.in);
+        for (int i = 1; i < 6; ++i) {
+            System.out.print("Digite o número " + i + " : ");
+            // Recebe entrada do usuário
+            number = input.nextDouble();
 
-    for (int i = 1; i < 6; ++i) {
-      System.out.print("Enter number " + i + " : ");
-      // takes input from the user
-      number = input.nextDouble();
+            // Se o número for negativo
+            // a instrução continue é executada
+            if (number <= 0.0) {
+                continue;
+            }
 
-      // if number is negative
-      // continue statement is executed
-      if (number <= 0.0) {
-        continue;
-      }
-
-      sum += number;
+            sum += number;
+        }
+        System.out.println("Soma = " + sum);
+        input.close();
     }
-    System.out.println("Sum = " + sum);
-    input.close();
-  }
 }
 ```
-#### Output:
+
+**Saída**:
 
 ```plaintext
-Enter number 1: 2.2
-Enter number 2: 5.6
-Enter number 3: 0
-Enter number 4: -2.4
-Enter number 5: -3
-Sum = 7.8
+Digite o número 1 : 2.2
+Digite o número 2 : 5.6
+Digite o número 3 : 0
+Digite o número 4 : -2.4
+Digite o número 5 : -3
+Soma = 7.8
 ```
-In the above example, we have used the for loop to print the sum of 5 positive numbers. Notice the line,
+
+No exemplo acima, usamos o loop for para calcular a soma de 5 números positivos. Observe a linha:
 
 ```java
-if (number < 0.0) {
+if (number <= 0.0) {
     continue;
 }
 ```
-Here, when the user enters a negative number, the continue statement is executed. This skips the current iteration of the loop and takes the program control to the update expression of the loop.
 
-Note: To take input from the user, we have used the Scanner object. To learn more, visit Java Scanner.
+Aqui, quando o usuário digita um número negativo, a instrução continue é executada. Isso pula a iteração atual do loop e leva o controle do programa para a expressão de atualização do loop.
+
+## Tipos de continue
+
+### 1. continue simples (não rotulado)
+
+```java
+public class ExemploContinue {
+    public static void main(String[] args) {
+        // Exemplo 1: continue em for
+        System.out.println("Exemplo 1 - continue em for:");
+        for (int i = 1; i <= 10; i++) {
+            if (i == 5 || i == 7) {
+                continue; // Pula 5 e 7
+            }
+            System.out.print(i + " ");
+        }
+        System.out.println("\n");
+        
+        // Exemplo 2: continue em while
+        System.out.println("Exemplo 2 - continue em while:");
+        int j = 1;
+        while (j <= 10) {
+            if (j % 2 == 0) {
+                j++;
+                continue; // Pula números pares
+            }
+            System.out.print(j + " ");
+            j++;
+        }
+        System.out.println("\n");
+        
+        // Exemplo 3: continue em do-while
+        System.out.println("Exemplo 3 - continue em do-while:");
+        int k = 1;
+        do {
+            if (k == 3 || k == 6) {
+                k++;
+                continue; // Pula 3 e 6
+            }
+            System.out.print(k + " ");
+            k++;
+        } while (k <= 10);
+        System.out.println("\n");
+    }
+}
+```
+
+### 2. continue rotulado (labeled continue)
+
+```java
+public class ContinueRotulado {
+    public static void main(String[] args) {
+        // Loop externo
+        externo: for (int i = 1; i <= 3; i++) {
+            System.out.println("Iteração externa: " + i);
+            
+            // Loop interno
+            for (int j = 1; j <= 5; j++) {
+                if (j == 3) {
+                    System.out.println("  Pulando iteração interna: " + j);
+                    continue externo; // Pula para a próxima iteração do loop externo
+                }
+                System.out.println("  Iteração interna: " + j);
+            }
+        }
+        System.out.println("Programa terminado!");
+    }
+}
+```
+
+## Exemplos Práticos
+
+### Exemplo 1: Filtrar Números
+
+```java
+public class FiltrarNumeros {
+    public static void main(String[] args) {
+        int[] numeros = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
+        
+        System.out.println("Números ímpares:");
+        for (int numero : numeros) {
+            if (numero % 2 == 0) {
+                continue; // Pula números pares
+            }
+            System.out.print(numero + " ");
+        }
+        System.out.println();
+        
+        System.out.println("Números divisíveis por 3:");
+        for (int numero : numeros) {
+            if (numero % 3 != 0) {
+                continue; // Pula números não divisíveis por 3
+            }
+            System.out.print(numero + " ");
+        }
+        System.out.println();
+    }
+}
+```
+
+### Exemplo 2: Processamento de Dados
+
+```java
+public class ProcessamentoDados {
+    public static void main(String[] args) {
+        String[] dados = {"João", "Maria", "", "Pedro", null, "Ana", "  ", "Carlos"};
+        
+        System.out.println("Nomes válidos:");
+        for (String nome : dados) {
+            // Pula strings vazias ou nulas
+            if (nome == null || nome.trim().isEmpty()) {
+                continue;
+            }
+            System.out.println("Nome: " + nome);
+        }
+    }
+}
+```
+
+### Exemplo 3: Validação de Entrada
+
+```java
+import java.util.Scanner;
+
+public class ValidacaoEntrada {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        int soma = 0;
+        int contador = 0;
+        
+        System.out.println("Digite 5 números entre 1 e 100:");
+        
+        while (contador < 5) {
+            System.out.print("Número " + (contador + 1) + ": ");
+            int numero = scanner.nextInt();
+            
+            // Validação do número
+            if (numero < 1 || numero > 100) {
+                System.out.println("Número inválido! Digite um número entre 1 e 100.");
+                continue; // Pula para a próxima iteração
+            }
+            
+            soma += numero;
+            contador++;
+        }
+        
+        System.out.println("Soma dos números válidos: " + soma);
+        System.out.println("Média: " + (double) soma / 5);
+        scanner.close();
+    }
+}
+```
+
+## Exercícios Práticos
+
+### Exercício 1: Números Primos
+**Objetivo**: Encontrar números primos em um intervalo usando continue.
+
+**Enunciado**: Crie um programa que encontre todos os números primos entre 1 e 50.
+
+**Resolução**:
+
+```java
+public class NumerosPrimos {
+    public static void main(String[] args) {
+        System.out.println("Números primos entre 1 e 50:");
+        
+        for (int i = 2; i <= 50; i++) {
+            // Verificar se i é primo
+            for (int j = 2; j <= Math.sqrt(i); j++) {
+                if (i % j == 0) {
+                    // Não é primo, pular para o próximo número
+                    continue;
+                }
+            }
+            
+            // Se chegou aqui, é primo
+            System.out.print(i + " ");
+        }
+        System.out.println();
+    }
+}
+```
+
+### Exercício 2: Soma de Números Específicos
+**Objetivo**: Somar apenas números que atendem a certos critérios.
+
+**Enunciado**: Crie um programa que some apenas os números de 1 a 100 que são múltiplos de 3 ou 5.
+
+**Resolução**:
+
+```java
+public class SomaMultiplos {
+    public static void main(String[] args) {
+        int soma = 0;
+        
+        for (int i = 1; i <= 100; i++) {
+            // Pular números que não são múltiplos de 3 ou 5
+            if (i % 3 != 0 && i % 5 != 0) {
+                continue;
+            }
+            
+            soma += i;
+            System.out.println("Adicionando " + i + " (soma atual: " + soma + ")");
+        }
+        
+        System.out.println("Soma final: " + soma);
+    }
+}
+```
+
+### Exercício 3: Processamento de Matriz
+**Objetivo**: Processar apenas elementos válidos de uma matriz.
+
+**Enunciado**: Crie um programa que calcule a média dos números positivos em uma matriz.
+
+**Resolução**:
+
+```java
+public class MediaMatriz {
+    public static void main(String[] args) {
+        int[][] matriz = {
+            {1, -2, 3, 4},
+            {-5, 6, -7, 8},
+            {9, 10, -11, 12},
+            {13, -14, 15, 16}
+        };
+        
+        int soma = 0;
+        int contador = 0;
+        
+        for (int i = 0; i < matriz.length; i++) {
+            for (int j = 0; j < matriz[i].length; j++) {
+                // Pular números negativos
+                if (matriz[i][j] <= 0) {
+                    continue;
+                }
+                
+                soma += matriz[i][j];
+                contador++;
+                System.out.println("Número positivo encontrado: " + matriz[i][j] + 
+                                 " na posição [" + i + "][" + j + "]");
+            }
+        }
+        
+        if (contador > 0) {
+            double media = (double) soma / contador;
+            System.out.println("Soma dos números positivos: " + soma);
+            System.out.println("Quantidade de números positivos: " + contador);
+            System.out.println("Média: " + media);
+        } else {
+            System.out.println("Nenhum número positivo encontrado!");
+        }
+    }
+}
+```
+
+### Exercício 4: Continue Rotulado Avançado
+**Objetivo**: Usar continue rotulado para processamento complexo.
+
+**Enunciado**: Crie um programa que encontre a primeira linha de uma matriz que contém apenas números positivos.
+
+**Resolução**:
+
+```java
+public class LinhaPositiva {
+    public static void main(String[] args) {
+        int[][] matriz = {
+            {1, 2, -3, 4},
+            {5, 6, 7, 8},
+            {9, -10, 11, 12},
+            {13, 14, 15, 16}
+        };
+        
+        externo: for (int i = 0; i < matriz.length; i++) {
+            System.out.println("Verificando linha " + i + ":");
+            
+            // Verificar se todos os elementos da linha são positivos
+            for (int j = 0; j < matriz[i].length; j++) {
+                if (matriz[i][j] <= 0) {
+                    System.out.println("  Elemento negativo encontrado: " + matriz[i][j]);
+                    continue externo; // Pular para a próxima linha
+                }
+                System.out.println("  Elemento positivo: " + matriz[i][j]);
+            }
+            
+            // Se chegou aqui, todos os elementos da linha são positivos
+            System.out.println("Linha " + i + " contém apenas números positivos!");
+            break; // Encontrou a primeira linha positiva
+        }
+    }
+}
+```
+
+## Conclusão
+
+A instrução `continue` é uma ferramenta valiosa para controlar o fluxo de execução em loops Java:
+
+- **continue simples**: Pula para a próxima iteração do loop mais interno
+- **continue rotulado**: Pula para a próxima iteração de um loop específico
+- **Filtragem eficiente**: Permite processar apenas elementos que atendem a critérios
+- **Melhora legibilidade**: Evita aninhamento excessivo de condicionais
+
+**Casos de uso comuns**:
+- Filtrar dados em loops
+- Pular iterações baseadas em condições
+- Processamento seletivo de elementos
+- Validação de entrada em loops
+
+Lembre-se de usar `continue` de forma clara e documentada para manter o código legível e previsível.
